# vizir

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: copyright.sh
.github/workflows/: ci.yml
plans/: README.md  engine-evolution.md  guides.md  io.md  mark-specs.md  perf.md  profiling.md  rendering.md  scales.md  transforms.md  vega-compat.md  vega-gap.md
vizir_charts/: Cargo.toml  README.md
vizir_charts/src/: area_mark.rs  axis.rs  bar_mark.rs  chart_spec.rs  float.rs  format.rs  layout.rs  legend.rs  lib.rs  line_mark.rs  measure.rs  point_mark.rs  rect_mark.rs  rule_mark.rs  scale.rs  sector_mark.rs  stacked_area_chart.rs  stacked_area_mark.rs  stacked_bar_chart.rs  stacked_bar_mark.rs  stacked_tests.rs  symbol.rs  text_mark.rs  time.rs  title.rs  z_order.rs
vizir_charts_demo/: Cargo.toml  README.md
vizir_charts_demo/src/: html.rs  main.rs  svg.rs
vizir_core/: Cargo.toml  README.md
vizir_core/src/: lib.rs
vizir_examples/: Cargo.toml
vizir_examples/src/: main.rs
vizir_text/: Cargo.toml  README.md
vizir_text/src/: lib.rs
vizir_text_parley/: Cargo.toml  README.md
vizir_text_parley/src/: lib.rs
vizir_text_web/: Cargo.toml  README.md
vizir_text_web/src/: lib.rs
vizir_transforms/: Cargo.toml  README.md
vizir_transforms/src/: lib.rs  program.rs  scene.rs  table.rs  transform.rs
vizir_vello_demo/: Cargo.toml  README.md
vizir_vello_demo/src/: main.rs
