[package]
name = "vizir_charts_demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Chart/plot demos built on vizir_core (kept out of core crate dev-deps)."
readme = "README.md"
keywords = ["visualization", "charts"]
categories = ["graphics"]
publish = false

[dependencies]
kurbo = { workspace = true, features = ["std"] }
peniko = { workspace = true, features = ["std"] }
vizir_charts = { workspace = true, features = ["std"] }
vizir_core = { workspace = true, features = ["std"] }
vizir_text_parley = { workspace = true, optional = true, features = ["std"] }
vizir_transforms = { workspace = true, features = ["std"] }

[lints]
workspace = true

[features]
default = []
parley = ["dep:vizir_text_parley"]
