[package]
name = "vizir_text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Text measurement traits and basic style/metrics types for VizIR."
readme = "README.md"
keywords = ["text", "layout", "no-std"]
categories = ["graphics", "no-std"]

[lints]
workspace = true

[features]
default = []
std = []
libm = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
