[package]
name = "vizir_text_parley"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parley-backed text measurement adapter for VizIR."
readme = "README.md"
keywords = ["text", "layout"]
categories = ["graphics"]

[dependencies]
parley = { version = "0.7.0", default-features = false }
vizir_text.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["parley/std", "parley/system"]
libm = ["parley/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
