[package]
name = "vizir_transforms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vega-ish table transforms (filter/project/sort) for VizIR."
readme = "README.md"
keywords = ["visualization", "charts"]
categories = ["no-std"]

[dependencies]
hashbrown.workspace = true
libm = { version = "0.2.15", optional = true }
vizir_core = { workspace = true, default-features = false }

[lints]
workspace = true

[features]
default = ["libm"]
std = ["vizir_core/std"]
libm = ["dep:libm", "vizir_core/libm"]
